// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> BottomPlacement story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-5"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-5"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 10px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="bottom"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; left: 0px; transform: translate(3px, 0px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> DarkVariant story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-2"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-2"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(10px, 0px);"
  >
    <div
      class="tippy-box tooltip tooltip--dark"
      data-animation="fade"
      data-escaped=""
      data-placement="right"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; top: 0px; transform: translate(0px, 3px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> Interactive story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div>
        <p>
          Hover over the button to make the tooltip appear.
        </p>
        <button
          class="fpo w-3 p-1"
        >
          •
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> InteractiveDisabled story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div>
        <p>
          Hover over the button to make the tooltip appear.
        </p>
        <span
          data-testid="disabled-child-tooltip-wrapper"
          tabindex="0"
        >
          <div
            class="fpo p-1"
          >
            •
          </div>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> LeftPlacement story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-3"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-3"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; right: 0px; transform: translate(-10px, 0px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="left"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; top: 0px; transform: translate(0px, 3px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> LightVariant story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-1"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-1"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(10px, 0px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="right"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; top: 0px; transform: translate(0px, 3px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> LongText story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-6"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-6"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(10px, 0px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="right"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan. Donec posuere semper fermentum. Vivamus venenatis laoreet venenatis. Sed consectetur, dolor sed tristique vehicula, sapien nulla convallis odio, et tempus urna mi eu leo. Phasellus a venenatis sapien. Cras massa lectus, sollicitudin id nulla id, laoreet facilisis est.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; top: 0px; transform: translate(0px, 3px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> LongTriggerText story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-7"
        class="fpo p-1"
      >
        Longer text to test placement
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-7"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(10px, 0px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="right"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; top: 0px; transform: translate(0px, 3px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> TextChild story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <span
        aria-describedby="tippy-8"
        data-testid="disabled-child-tooltip-wrapper"
        tabindex="0"
      >
        <span>
          Tooltip trigger
        </span>
      </span>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-8"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, -10px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 200ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 200ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; left: 0px; transform: translate(3px, 0px);"
      />
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> TopPlacement story renders snapshot 1`] = `
<body>
  <div>
    <div
      class="p-16"
    >
      <div
        aria-describedby="tippy-4"
        class="fpo w-3 p-1"
      >
        •
      </div>
    </div>
  </div>
  <div
    data-tippy-root=""
    id="tippy-4"
    style="pointer-events: none; z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, -10px);"
  >
    <div
      class="tippy-box tooltip tooltip--light"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      role="tooltip"
      style="max-width: 350px; transition-duration: 0ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 0ms;"
      >
        <div>
          <span
            data-testid="tooltip-content"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             
            <b>
              Donec a erat eu augue consequat eleifend non vel sem.
            </b>
             Praesent efficitur mauris ac leo semper accumsan.
          </span>
        </div>
      </div>
      <div
        class="tippy-arrow"
        style="position: absolute; left: 0px; transform: translate(3px, 0px);"
      />
    </div>
  </div>
</body>
`;
